# SnuggleBots

./: .gitignore  .streamlit_rebuild  AZURE_SETUP.md  ORGANIZATION_SUMMARY.md  PLP_RAG_README.md  README.md  config.py  cross_encoder_reranker.py  document_processor.py  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  extractive_generator.py  generation_system.py  multi_turn_chat.py  multi_turn_demo.py  pet_data.py  proposed_app.py  proposed_rag_system.py  proposed_rag_system.py.bak  pyproject.toml  requirements.txt  requirements_stable.txt  rrf_fusion.py  simple_chat_manager.py  test_push_access.txt  vector_store.py  web_scraper.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml  rebuild.txt
apps/: __init__.py  optimized_unified_app.py  unified_petbot_app.py  unified_petbot_app_fixed.py  unified_petbot_app_merged.py  unified_petbot_app_zx.py
azure_system/: __init__.py  azure_petbot_app.py
chatbot_flow/: __init__.py  chatbot_pipeline.py  entity_extractor.py  intent_classifier.py  responses.py  synonyms.py
documents/: 2023-aaha-senior-care-guidelines-for-dogs-and-cats.txt  Cats For Dummies PDF.txt  Kitten-book.txt  MSAH-ultimate-guide-to-dog-care.txt  SOL - Kitten Care Guide.txt  The-Complete-Dog-Breed-Book-Choose-the-Perfect-Dog-for-You-New-Edition.txt  article-a-z-guide-for-dog-owners.txt  cat-care-guide.txt  pet_health_guide.txt  sample_document.txt  urls.txt
examples/: basic_usage.py
multi_turn/: README.md  multi_turn_chat.py  multi_turn_demo.py
pet_retrieval/: azure_io.py  config.py  enhanced_retrieval.py  models.py  retrieval.py  ui.py
(+54 files in other folders)
